Fix wrap css

--- a/client/css/up1.css
+++ b/client/css/up1.css
@@ -61,7 +61,8 @@
 }
 
 .line {
-  word-wrap: break-word;
+  word-wrap: normal;
+  white-space: pre-wrap;  
   min-height: 1em;
 }
 
